--- a/src/components/about/me-image.css
+++ b/src/components/about/me-image.css
@@ -1,7 +1,33 @@
-img {
+.me-img-single {
+  width: 14%;
+  height: 14%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px;
+  border-style: solid;
+  border-radius: 30%;
+  -moz-box-shadow: 0 0 5px #347ad6;
+  -webkit-box-shadow: 0 0 5px #347ad6;
+  box-shadow: 0px 0px 20px #347ad6;
+}
+
+.me-img-cmd {
   width: 10%;
   height: 10%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 1px;
+}
+
+.zoomable-image {
+  transition: transform 0.3s ease;
+  margin-bottom: 4%;
+  margin-top: 3%;
+}
+
+/* Estilo aplicado quando o mouse passa por cima da imagem */
+.zoomable-image:hover {
+  transform: scale(1.2);
 }
