--- a/src/shared/styles/index.css
+++ b/src/shared/styles/index.css
@@ -15,7 +15,6 @@
 
 #root {
   padding: 0 1rem 0 1rem;
-  text-align: center;
   width: 100%;
 }
 
@@ -45,4 +44,8 @@ a:hover {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+body {
+  color: aliceblue;
 }
